// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFill props exists 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啌
</>
`;

exports[`IconFill should create Icon element. 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啊
</>
`;

exports[`IconFill should create fillGlyphMap 1`] = `
{
  "account-book": 21834,
  "alert": 21835,
  "alipay-circle": 21836,
  "alipay-square": 21837,
  "aliwangwang": 21838,
  "amazon-circle": 21839,
  "amazon-square": 21840,
  "android": 21841,
  "api": 21842,
  "apple": 21843,
  "appstore": 21844,
  "audio": 21845,
  "backward": 21846,
  "bank": 21847,
  "behance-circle": 21848,
  "behance-square": 21849,
  "bell": 21850,
  "bilibili": 21851,
  "book": 21852,
  "box-plot": 21853,
  "bug": 21854,
  "build": 21855,
  "bulb": 21856,
  "calculator": 21857,
  "calendar": 21858,
  "camera": 21859,
  "car": 21860,
  "caret-down": 21861,
  "caret-left": 21862,
  "caret-right": 21863,
  "caret-up": 21864,
  "carry-out": 21865,
  "check-circle": 21866,
  "check-square": 21867,
  "chrome": 21868,
  "ci-circle": 21869,
  "clock-circle": 21870,
  "close-circle": 21871,
  "close-square": 21872,
  "cloud": 21873,
  "code": 21876,
  "code-sandbox-circle": 21874,
  "code-sandbox-square": 21875,
  "codepen-circle": 21877,
  "codepen-square": 21878,
  "compass": 21879,
  "contacts": 21880,
  "container": 21881,
  "control": 21882,
  "copy": 21883,
  "copyright-circle": 21884,
  "credit-card": 21885,
  "crown": 21886,
  "customer-service": 21887,
  "dashboard": 21888,
  "database": 21889,
  "delete": 21890,
  "diff": 21891,
  "dingtalk-circle": 21892,
  "dingtalk-square": 21893,
  "discord": 21894,
  "dislike": 21895,
  "dollar-circle": 21896,
  "down-circle": 21897,
  "down-square": 21898,
  "dribbble-circle": 21899,
  "dribbble-square": 21900,
  "dropbox-circle": 21901,
  "dropbox-square": 21902,
  "edit": 21903,
  "environment": 21904,
  "euro-circle": 21905,
  "exclamation-circle": 21906,
  "experiment": 21907,
  "eye": 21909,
  "eye-invisible": 21908,
  "facebook": 21910,
  "fast-backward": 21911,
  "fast-forward": 21912,
  "file": 21924,
  "file-add": 21913,
  "file-excel": 21914,
  "file-exclamation": 21915,
  "file-image": 21916,
  "file-markdown": 21917,
  "file-pdf": 21918,
  "file-ppt": 21919,
  "file-text": 21920,
  "file-unknown": 21921,
  "file-word": 21922,
  "file-zip": 21923,
  "filter": 21925,
  "fire": 21926,
  "flag": 21927,
  "folder": 21930,
  "folder-add": 21928,
  "folder-open": 21929,
  "format-painter": 21931,
  "forward": 21932,
  "frown": 21933,
  "fund": 21934,
  "funnel-plot": 21935,
  "gift": 21936,
  "github": 21937,
  "gitlab": 21938,
  "gold": 21939,
  "golden": 21940,
  "google-circle": 21941,
  "google-plus-circle": 21942,
  "google-plus-square": 21943,
  "google-square": 21944,
  "hdd": 21945,
  "heart": 21946,
  "highlight": 21947,
  "home": 21948,
  "hourglass": 21949,
  "html5": 21950,
  "idcard": 21951,
  "ie-circle": 21952,
  "ie-square": 21953,
  "info-circle": 21954,
  "instagram": 21955,
  "insurance": 21956,
  "interaction": 21957,
  "layout": 21958,
  "left-circle": 21959,
  "left-square": 21960,
  "like": 21961,
  "linkedin": 21962,
  "lock": 21963,
  "mac-command": 21964,
  "mail": 21965,
  "medicine-box": 21966,
  "medium-circle": 21967,
  "medium-square": 21968,
  "meh": 21969,
  "merge": 21970,
  "message": 21971,
  "minus-circle": 21972,
  "minus-square": 21973,
  "mobile": 21974,
  "money-collect": 21975,
  "moon": 21976,
  "muted": 21977,
  "notification": 21978,
  "open-a-i": 21979,
  "pause-circle": 21980,
  "pay-circle": 21981,
  "phone": 21982,
  "picture": 21983,
  "pie-chart": 21984,
  "pinterest": 21985,
  "play-circle": 21986,
  "play-square": 21987,
  "plus-circle": 21988,
  "plus-square": 21989,
  "pound-circle": 21990,
  "printer": 21991,
  "product": 21992,
  "profile": 21993,
  "project": 21994,
  "property-safety": 21995,
  "pushpin": 21996,
  "qq-circle": 21997,
  "qq-square": 21998,
  "question-circle": 21999,
  "read": 22000,
  "reconciliation": 22001,
  "red-envelope": 22002,
  "reddit-circle": 22003,
  "reddit-square": 22004,
  "rest": 22005,
  "right-circle": 22006,
  "right-square": 22007,
  "robot": 22008,
  "rocket": 22009,
  "safety-certificate": 22010,
  "save": 22011,
  "schedule": 22012,
  "security-scan": 22013,
  "setting": 22014,
  "shop": 22015,
  "shopping": 22016,
  "signal": 22017,
  "signature": 22018,
  "sketch-circle": 22019,
  "sketch-square": 22020,
  "skin": 22021,
  "skype": 22022,
  "slack-circle": 22023,
  "slack-square": 22024,
  "sliders": 22025,
  "smile": 22026,
  "snippets": 22027,
  "sound": 22028,
  "spotify": 22029,
  "star": 22030,
  "step-backward": 22031,
  "step-forward": 22032,
  "stop": 22033,
  "sun": 22034,
  "switcher": 22035,
  "tablet": 22036,
  "tag": 22037,
  "tags": 22038,
  "taobao-circle": 22039,
  "taobao-square": 22040,
  "thunderbolt": 22041,
  "tik-tok": 22042,
  "tool": 22043,
  "trademark-circle": 22044,
  "trophy": 22045,
  "truck": 22046,
  "twitch": 22047,
  "twitter-circle": 22048,
  "twitter-square": 22049,
  "unlock": 22050,
  "up-circle": 22051,
  "up-square": 22052,
  "usb": 22053,
  "video-camera": 22054,
  "wallet": 22055,
  "warning": 22056,
  "wechat": 22058,
  "wechat-work": 22057,
  "weibo-circle": 22059,
  "weibo-square": 22060,
  "windows": 22061,
  "x": 22062,
  "yahoo": 22063,
  "youtube": 22064,
  "yuque": 22065,
  "zhihu-circle": 22066,
  "zhihu-square": 22067,
}
`;
